hphp/hack/test/typecheck/trait_bad_override.php.shallow_decl.exp
File "trait_bad_override.php", line 20, characters 7-14:
This class overrides some members with a different staticness (Typing[4091])
  File "trait_bad_override.php", line 5, characters 14-15:
  The property `$x` is declared as non-static here
  File "trait_bad_override.php", line 13, characters 24-25:
  But it conflicts with an inherited static declaration here
File "trait_bad_override.php", line 20, characters 7-14:
This class overrides some members with a different staticness (Typing[4091])
  File "trait_bad_override.php", line 5, characters 14-15:
  The property `x` is declared as non-static here
  File "trait_bad_override.php", line 13, characters 24-25:
  But it conflicts with an inherited static declaration here
File "trait_bad_override.php", line 20, characters 7-14:
This class overrides some members with a different staticness (Typing[4091])
  File "trait_bad_override.php", line 9, characters 22-24:
  The method `lol` is declared as non-static here
  File "trait_bad_override.php", line 17, characters 26-28:
  But it conflicts with an inherited static declaration here
File "trait_bad_override.php", line 20, characters 7-14:
This class overrides some members with a different staticness (Typing[4091])
  File "trait_bad_override.php", line 14, characters 22-25:
  The method `func` is declared as non-static here
  File "trait_bad_override.php", line 6, characters 26-29:
  But it conflicts with an inherited static declaration here
